# mice

./: .gitignore  Cargo.toml  LICENSE  README.md  index.css  justfile
app/: Cargo.toml
app/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
init/: Cargo.toml
init/src/: lib.rs  main.rs
interop/: Cargo.toml
interop/src/: common_structs.rs  db_utils.rs  lib.rs  server_functions.rs
src/: main.rs
