[package]
name = "todo"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "state of the art Check-list"


[dependencies]
itertools = "0.10.5"
thiserror = "2"
log = "0.4"
simple_logger = "5"
env_logger = "0.11"
chrono = "0.4"
colored = "2"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
csv = "1.3"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-macros = " 2.4"
anyhow = "1.0.97"
serde_derive = "1.0.219"
arboard = "3.4.1"
scraper = "0.23.1"
