[package]
name = "init"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Common
app = { path = "../app", default-features = false }
interop = { path = "../interop", default-features = false }
leptos.workspace = true
log.workspace = true
cfg-if.workspace = true

# Front
console_error_panic_hook    = { workspace = true, optional = true}
console_log                 = { workspace = true, optional = true}
wasm-bindgen                = { workspace = true, optional = true}

# Back
leptos_axum     = { workspace = true, optional = true}
axum            = { workspace = true, optional = true}
axum-macros     = { workspace = true, optional = true }
simple_logger   = { workspace = true, optional = true}
tokio           = { workspace = true, optional = true}
tower           = { workspace = true, optional = true}
tower-http      = { workspace = true, optional = true}
dotenvy         = { workspace = true, optional = true}
surrealdb       = { workspace = true, optional = true}
serde           = { workspace = true, optional = true}

[features]
front = [
    "app/hydrate",
    "interop/front-op",
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:wasm-bindgen"
]
back = [
    "app/ssr",
    "interop/back-op",
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:axum-macros",
    "dep:simple_logger",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:dotenvy",
    "dep:surrealdb",
    "dep:serde"
]