[package]
name = "interop"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
web-sys.workspace = true
regex.workspace = true
surrealdb = { workspace = true, optional = true }
serde.workspace = true
dotenvy = { workspace = true, optional = true}

[features]
default = []
front-op = [
    "leptos/hydrate"
]
back-op = [
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:leptos_axum", 
    "dep:surrealdb"
]
cli-op = [
    "dep:surrealdb"
]
